# aiida-epw

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: conf.py  index.md  index.rst  installation.md  installation.rst  myst.yml  quickstart.md
docs/api_reference/: aiida_epw.rst  aiida_epw.tools.rst  aiida_epw.workflows.protocols.rst  aiida_epw.workflows.rst  index.rst  modules.rst
docs/developer_guide/: base.rst  index.rst  overview.rst  prep.rst  supercon.rst
docs/tutorials/: index.rst  prep.rst  supercon.rst  transport.rst
docs/user_guide/: index.rst
src/aiida_epw/: __about__.py  __init__.py
src/aiida_epw/calculations/: epw.py
src/aiida_epw/parsers/: __init__.py  epw.py
src/aiida_epw/tools/: __init__.py  calculators.py  kpoints.py  parsers.py  plot.py  workchain.py
src/aiida_epw/workflows/: __init__.py  base.py  prep.py  supercon.py
src/aiida_epw/workflows/protocols/: __init__.py  base.yaml  prep.yaml  supercon.yaml
tests/: conftest.py
tests/files/tools/parsers/a2f/: aiida.a2f  aiida.a2f_proj  aiida.dos  aiida.phdos  aiida.phdos_proj
tests/files/tools/parsers/default/: aiida.out
tests/files/tools/parsers/lambda/: aiida.lambda_FS  aiida.lambda_k_pairs
tests/tools/: test_parsers.py
tests/tools/test_parsers/: test_parse_epw_a2f.yml  test_parse_epw_a2f_proj.yml  test_parse_epw_dos.yml  test_parse_epw_gap_function.yml  test_parse_epw_lambda_FS.yml  test_parse_epw_lambda_k_pairs.yml  test_parse_epw_phdos.yml  test_parse_epw_stdout.yml
